--- a/less/theme.less
+++ b/less/theme.less
@@ -39,6 +39,9 @@
 @mp-tools-margin:             0 0 20px 0;
 
 // Search
+@mp-search-item-spacing:      15px;
+@mp-search-item-margin-bottom:0px;
+@mp-search-subject-color:     @black;
 @mp-search-subject-font:      'SourceSansPro-Bold';
 @mp-search-subject-font-size: 18px;
 @mp-search-from-color:        @gray;
